# mdnav

./: .gitignore  Cargo.toml  README.md  build-mdnav.ps1  build-release-linux.ps1  build-release.ps1  install.ps1  install.sh  package-all-releases.ps1  package-release-linux.ps1  package-release.ps1  run-mdnav.ps1
.cargo/: config.toml
DocExample/: mkdocs.yml
DocExample/docs/: 00-INTRO.md
DocExample/docs/DIAGRAMS/: ARCHITECTURE.md
DocExample/docs/GUIDE/: 01-GETTING-STARTED.md  02-NAVIGATION.md
DocExample/docs/MERMAID-EXAMPLES/: 00-INDEX.md  01-BASIC-FLOWCHART.md  02-STYLED-FLOWCHART.md  03-SEQUENCE-DIAGRAM.md  04-PIE-CHART.md  05-GIT-GRAPH.md
src/: app.rs  config.rs  docs.rs  main.rs  markdown.rs  ui.rs
