[package]
name = "mdnav"
version = "0.1.6"
edition = "2021"
description = "Terminal navigator for MkDocs and Markdown documentation trees"

[dependencies]
anyhow = "1"
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
arboard = "3"
